feat: 이름 오름차순으로 유저의 status에 따라 순서대로 멤버 조회